# moles-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
docs/: contributing.md  index.md  installation.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/tools/: env-updater.md
src/moles_tools/: __init__.py  __main__.py  env_updater.py
tests/: __init__.py  test_env_updater.py
tests/files/: env.example  env.update
